--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@supabase/supabase-js": "^2.97.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.28",
